# mythic-dash

./: .clang-format  .clang-format~  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.in  README.md
asset/gfx/: background.pdn  logo.pdn  sprites.pdn
asset/map/: .maze01.tmj.swp  maze01.csv  maze01.tmj  maze01.tmx  maze02.tmj  maze02.tmx  maze03.tmj  maze03.tmx  maze04.tmj  maze04.tmx  maze05.tmj  maze05.tmx  maze06.tmj  maze06.tmx  maze07.tmj  maze07.tmx  puny-dungeon-tiles.tsx  tileset.tsx
asset/map/normal/: maze03.tmj  maze04.tmx
asset/map/test/: maze04.tmj
dev/gfx/: logo.pdn
dev/map/: maze01.tmx  maze03.tmx  maze06.tmx
doc/: README_game.md  style-guide.md
doc/html/: annotated.html  annotated_dup.js  classes.html  common_8h.html  common_8h.js  common_8h_source.html  dir_120ed4da3e3217b1e7fc0b4f48568e79.html  dir_120ed4da3e3217b1e7fc0b4f48568e79.js  dir_2241064965c8d9ca993f08b926076f7d.html  dir_2241064965c8d9ca993f08b926076f7d.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  game_8c.html  game_8c.js  game_8h.html  game_8h.js  game_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  log_2log_8c.html  log_2log_8c.js  log_8h.html  log_8h.js  log_8h_source.html  main_8c.html  main_8c.js  navtreedata.js  navtreeindex0.js  player_8c.html  player_8c.js  (+15 more)
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  enumvalues_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  (+5 more)
doc/plan/: movement.md
include/game/: game.h
src/: common.h  debug.c  game.c  game.h  internal.h  main.c  player.c  player.h
src/engine/: anim.c  engine.c  engine.h  engine_internal.h  font.c  internal.h  renderer.c  sprite.c  texture.c
src/game/: actor.c  actor.h  actor_move.c  anim.h  asset.h  cute_impl.c  debug.c  draw.c  game.c  game.h  game_internal.h  ghost.c  internal.h  maze.c  player.c
src/game/actor/: actor.c  actor.h  internal.h  move.c
src/game/asset/: asset.c  asset.h  internal.h
src/game/audio/: audio.c  audio.h
src/game/creature/: ai.c  creature.c  creature.h  internal.h
src/game/debug/: debug.c  debug.h
src/game/draw/: draw.c  draw.h
src/game/ghost/: ai.c  ghost.c  ghost.h  internal.h
src/game/input/: input.c  input.h
src/game/maze/: internal.h  load.c  maze.c  maze.h
src/game/menu/: menu.c  menu.h
src/game/options/: options.c  options.h
src/game/player/: player.c  player.h
src/game/scores/: scores.c  scores.h
src/log/: log.c  log.h
src/test/: engine.c  game.c  log.c
test/: game.c  scale.c  test_game.c
web/: shell.html
